--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,29 @@
 name: gh-action-starter
-description: Test Workflow for GitHub action
-author: delphineuni
-version: 1.0.0
-branding:
-  icon: 'docker'
-  color: 'gray-dark'
-  
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
+
+run-name: ${{ github.actor }}'s Workflow is started
+on: 
+  [push]
+jobs:
+  create-docker-image:
+    runs-on: ubuntu:latest
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: user/app:latest
+      - name: success
+        run: echo "success !"
