--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   [push]
 jobs:
   create-docker-image:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       -
         name: Set up QEMU
